--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: nine09/repo_name
+repository: nine09/nine09.github.io
 repository_tree: master
 
 
